<resources>
    <string name="app_name">BuzzBoardFinalProject</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="add_post">Add Post</string>
    <string name="app_favorites">Favorites</string>
    <string name="app_profile">Profile</string>
    <string name="app_home">Home</string>
    <string name="app_messages">Messages</string>
    <string name="poll_status_open">Open</string>
    <string name="username">Username</string>
    <string name="post_title">Post Title</string>
    <string name="poll_votes">%1$d votes</string>
    <string name="post_description">Post Description</string>
    <string name="post_location">Post Location</string>
    <string name="app_add_post">Add Post</string>
    <string name="label_account_type">Account type</string>
    <string-array name="account_type_options">
        <item>Student</item>
        <item>Organization</item>
        <item>BuzzBoard Official</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="add_post_fragment">Add Post Fragment</string>
    <string name="favorites_fragment">Favorites Fragment</string>
    <string name="messages_fragment">Messages Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="post_image">Post image</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="detail_post_title">Post Title</string>
    <string name="detail_description">This is the description of the post.</string>
    <string name="detail_location">Location</string>
    <string name="detail_datetime">Date &amp; Time</string>
    <string name="buzzboard">BuzzBoard</string>
    <string name="search">Search</string>
    <string name="profile_picture">Profile picture</string>
    <string name="favorite_button">fav_button</string>
    <string name="close">Close</string>
    <string name="capture">Capture</string>
    <string name="register">Register</string>
    <string name="location">Location</string>
    <string name="short_description_of_the_event">Short description of the event...</string>
    <string name="back" />

</resources>