<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/app_home"
        android:icon="@drawable/baseline_home_24" />

    <item
        android:id="@+id/favorites"
        android:title="@string/app_favorites"
        android:icon="@drawable/baseline_favorite_border_24" />

    <item
        android:id="@+id/add_post"
        android:title="@string/app_add_post"
        android:icon="@drawable/baseline_add_circle_outline_24" />

    <item
        android:id="@+id/messages"
        android:title="@string/app_messages"
        android:icon="@drawable/baseline_message_24" />

    <item
        android:id="@+id/profile"
        android:title="@string/app_profile"
        android:icon="@drawable/baseline_person_outline_24" />

</menu>
